Fix embed page on mobile.

--- a/applications/dashboard/design/admin.css
+++ b/applications/dashboard/design/admin.css
@@ -8006,11 +8006,11 @@ button.close, button.Close {
 .nav-adventure .nav-item-title {
   line-height: 1;
   font-weight: 500;
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.375rem;
 }
 
 .nav-adventure .nav-item-description {
-  line-height: 1;
+  margin-bottom: -0.3125rem;
 }
 
 .nav-adventure .nav-link {
@@ -8020,9 +8020,7 @@ button.close, button.Close {
   justify-items: flex-start;
   -ms-flex-align: center;
   align-items: center;
-  min-height: 4.5rem;
-  padding-left: 1.125rem;
-  padding-right: 1.125rem;
+  padding: 1.125rem 1.125rem;
   color: #555a62;
   transition: background-color .1s;
 }
@@ -8045,6 +8043,8 @@ button.close, button.Close {
 }
 
 .nav-adventure .nav-item-icon {
+  -ms-flex-negative: 0;
+  flex-shrink: 0;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-pack: center;
